# fix

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  BACKLOG.md  BUILD.md  CMakeLists.txt  README.md  acceptance_test.sh  conan_install.sh  conanfile.txt
.ai/agents/: architect.md  build.md  coder.md  product-owner.md  reviewer.md  tester.md  toolsmith.md
.ai/instructions/: architecture.md  build-and-dependencies.md  cpp-code-style.md  domain-model.md  git-workflow.md  testing.md
.fix/issues/: tri-tit-0917b71.toml
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  coder.agent.md  product-owner.agent.md  reviewer.agent.md  tester.agent.md  toolsmith.agent.md
behave/: CMakeLists.txt  environment.py  fix_cli.feature  hello.feature  issue_list_create.feature
behave/steps/: assertions.py  fix_cli.py  fix_issues.py  hello.py
build_scripts/: run-behave.sh
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
docs/: Gemfile  _config.yml  index.md
docs/_pages/: about.md  archive.md  frontpage.md  milestones.md
docs/_posts/: 2021-07-25-dev-diary-starting.md  2021-07-25-setup.md  2021-07-26-welcome-to-jekyll.markdown  2021-07-29-jekyll.md  2021-07-30-behave-poc.md  2021-07-31-define-first-milestone.md  2021-07-31-dev-diary-starting.md  2021-08-01-cli-app-with-usage.md  2021-08-02-return-code-for-cli-app.md  2021-08-03-tooling-clang-format-and-ctest.md  2021-08-05-create-and-list-issues.md  2021-08-06-empty-list-scenario.md  2021-08-07-refactoring-session.md  2021-08-09-the-create-command.md  2021-08-13-add-issue-application-service.md  2021-08-17-finish-create-issue-scenario.md  2021-08-19-small-behave-changes.md  2021-08-20-the-title-domain-class.md  2021-08-21-enable-use-of-std-error_code.md  2021-08-23-using-expected-for-errors.md  2021-08-27-roadblock-wsl-malfunction.md  2021-08-28-title-finished.md  2021-08-29-minor-fixes.md  2021-09-03-description-class.md  2021-09-08-issue-id-class.md
docs/conversations/: 2026-03-17_create-agents-md.md  2026-03-18_create-agentic-dev-team.md
scripts/: dev-diary.sh  init.sh  verify_commits.ps1
src/: CMakeLists.txt  Json.h  RestApi.cpp  RestApi.h  Storage.h  fix.cpp  main.cpp
src/Server/: FixServer.cpp  FixServer.h  HTMLRequestHandler.cpp  HTMLRequestHandler.h  RESTRequestHandler.cpp  RESTRequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h
src/cpp/: Issue.cpp  Issue.h  RestApi.cpp  RestApi.h  Storage.h  fix.cpp
src/cpp/server/: FixServer.cpp  RESTRequestHandler.cpp  RESTRequestHandler.h
src/cpp/storage/: FileAccess.cpp  FileAccess.h  TextFileStorage.cpp  TextFileStorage.h
src/domain/: CMakeLists.txt  application_service.cpp  application_service.hpp  description.cpp  description.hpp  domain_error.cpp  domain_error.hpp  issue.cpp  issue.hpp  issue_id.cpp  issue_id.hpp  issue_repository.hpp  issue_service.hpp  text_utils.hpp  title.cpp  title.hpp
src/fix_cli/: CMakeLists.txt  app.cpp  app.hpp
src/infrastructure/: CMakeLists.txt  toml_issue_repository.cpp  toml_issue_repository.hpp
src/server/: FixServer.cpp  FixServer.h  HTMLRequestHandler.cpp  HTMLRequestHandler.h  RESTRequestHandler.cpp  RequestHandlerFactory.cpp  RequestHandlerFactory.h
src/storage/: TextFileStorage.cpp  TextFileStorage.h
test/: CMakeLists.txt  Issues.cpp  Main.cpp  RestAPI.cpp  testmain.cpp
test/behave/: environment.py
test/behave/features/: issue.id.feature  issue.list.feature  issue.new.feature  issues.feature
test/behave/steps/: fix_context.py  issue_steps.py
test/cpp/: Issue.cpp  RestAPI.cpp  TestFrameworks.h
test/domain/: CMakeLists.txt  application_service_test.cpp  catch2_expected_matcher.hpp  description_test.cpp  domain_error_test.cpp  in_memory_issue_repository.hpp  issue_id_test.cpp  issue_test.cpp  title_test.cpp
test/fix_cli/: .clang-tidy  CMakeLists.txt  app_test.cpp
